syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.ggwadera";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.ggwadera;

service PixService {
  rpc AddPixKey (NewPixKeyRequest) returns (NewPixKeyReply) {}
}

enum KeyType {
  KEY_TYPE_UNSPECIFIED = 0;
  CPF = 1;
  PHONE = 2;
  EMAIL = 3;
  RANDOM = 4;
}

enum AccountType {
  ACCOUNT_TYPE_UNSPECIFIED = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message NewPixKeyRequest {
  string client_id = 1;
  string key = 2;
  KeyType key_type = 3;
  AccountType account_type = 4;
}

message NewPixKeyReply {
  string pix_id = 1;
}